--- a/机器学习/深度学习（李宏毅）.md
+++ b/机器学习/深度学习（李宏毅）.md
@@ -2116,6 +2116,8 @@
 
 - 这一节主要讲RNN应用，如何实现一个循环神经网络的分类器，案例：名字分类，输入数据：姓名（几千个），输出数据：名字所属国家（18种）。
 
+- RNN可以加入ATT注意力机制
+
 - 步骤：
 
   1. 把字/词变成一个ont-hot向量或者输入到嵌入层，那么问题来了：各个名字的长度不一样怎么办？换句话说，一个名字的长度就是该样本的特征数，**如何处理样本特征数不一样**？
@@ -2163,8 +2165,8 @@
         reader = csv.reader(f)
         rows = list(reader)
         
-      self.names = [row[0]for row in rows]
-      self.countries = [row[1] for row in rows]
+      self.names = [row[0]for row in rows]  # 名字列表 字符串
+      self.countries = [row[1] for row in rows]  # 国家列表 字符串
       self.len = len(self.names)
       self.countrt_list = list(sorted(set(self.countries)))
       # 将列表转成词典
@@ -2194,10 +2196,51 @@
   
   N_COUNTRY = train_dataset.getCountriesNum()
   
+  # 名字列表 字符串 to tensor(变换到了batch , seq，矩阵！！)
+  def make_tensors(names,countries):
+    # 将名字列表里面的每个名字都分开成单个的字符，并且转换为ascii码列表
+    '''
+    	def name2list(name):
+    		arr = [ord(c)for c in name]
+    		return arr,len(arr)
+    '''
+    sequences_and_lengths = [name2List(name)for name in names] # 每个名字，arr，len
+    name_sequence = [s1[0]for s1 in sequences_and_lengths]
+    seq_lengths = torch.longTensor([s1[1]for s1 in sequences_and_lengths])
+    
+    countries = countries.long() # 记得处理成long类型
+    
+    # 做padding，原理是先创建一个矩阵，然后把相应的数据拷贝过来
+    seq_tensor = torch.zeros(len(name_sequence),seq_lengths.max()).long()
+    for idx,(seq,seq_len) in enumerate(zip(name_sequences,seq_lengths)):
+      seq_tensor[idx,:seq_len] = torch.LongTensor(seq)
+    
+    
+    # 排序,按照序列的长度进行排序,由大到小，返回排好序的序列和ids
+    seq_lengths,perm_idx = seq_lengths.sort(dim = 0,descending = True)
+    seq_tensor = seq_tensor[perm_idx]
+    countries = conutries[perm_idx]
+    
+    return create_tensor(seq_tensor),create_tensor(seq)lengths,create_tensor(countries)
+  '''
+  	def create_tensor:
+  		#用device去跑
+  		if USE_GPU:
+  			device = torch.device('mps')
+  			tensor = tensor.to(device)
+  		return tensor
+  '''
+    
+    
+  
+  
+  
+  
   
   #2.构建模型
   class RNNClassifier(torch.nn.Module):
     def __init__(self,input_size,hidden_size,output_size,num_layers,direction = 1):
+      # output_size 就是 num_class
       super(RNNClassifier).__init()
       self.hidden_size = hidden_size
       self.num_layers = num_layers
@@ -2210,16 +2253,59 @@
     
     def forward(self,x,seq_lengths):
       hidden0 = torch.zero(self.n_layers * self.direction,batch_size,self.hidden_size)
-      input = input.t()
+      input = input.t()  # 转置input batch_size * seq_size -> seq_size * batch_size
       batch_size = input.size(1)
       x = self.embedding(x)
       
+      # 发现每个名字列表里面有很多0，为了提高计算效率，我们将它排序，需要两个变量：input和各个名字的长度列表，如何将input按照每个名字的有效长度（统一的长度（特征数）减去补充的0）进行降序排序？：用pack_padded_sequence ，第一个参数tensor，维度要求：seq , batch , hidden_size,,且已经降序排好了！！！！自己排，第二个参数要求是longtensor，维度要求：
+      gru_input = pack_padded_sequence(embedding,seq_lengths)
       
+      output,hn = self.gru(gru_input,hidden0)
+      
+      # 双向的话 hn和hn‘要拼接，单向的话，hn就可以了
+      if self.n_direction == 2:
+        hidden_cat = torch.cat(hn[-1],hn[-2],dim = 1)
+      else:
+        hidden_cat = hn[-1]
+      
+      fc_output = self.fc(hidden_cat)
+      return fc_output
+        
+      
+  # 训练迭代
+  def train():
+    total_loss = 0
+    for i,(name,countries) in enumerate(trainloader):
+      inputs,seq_lengths,target = make_tensors(names,countries)
+      output = classifier(inputs,seq_lengths)
+      loss = criterion(output,target)
+      optimizer.zero_grad()
+      loss.backward()
+      optimizer.step()
+      
+      total_loss += loss.item()
+  
+      return total_loss
+      
+  # 测试迭代
+  def test():
+    correct = 0
+    total = len(testset)
+    with torch.no_grad():
+      for i,(names,countries) in enumerate(testloader):
+        inputs,seq_lengths,target = make_tensors(names,countries)
+        output = classifier(inputs,seq_lengths)
+        pred = output.max(dim = 1,keepdim = True)[1]  # 
+        correct += pred.eq(target.view_as(pred)).sum().item()
+        
+        percent = correct / total
+        print(percent)
+        
+        return percent
   
   
   
-  
-  
+  # 主函数
   if __name__ == '__main__':
     classifier = RNNClassifier(N_CHARS,HIDDEN_SIZE,N_COUNTRY,N_LAYER)
     '''
@@ -2256,6 +2342,22 @@
 
   
 
-- 22 
+- 深度学习做古诗：
+
+  - 首先需要大量古诗的数据集
+
+  - 把古诗中所有的字找出来，建立一个词典，如（山：23，水：95），古诗数据集中一共有多少个字我们的词典就有多少条记录
+
+  - 输入嵌入层
+
+  - 再，输入rnn，要求： 比如说何日平胡虏，我们输入何到rnn和fc中，要求输出日；输入日到rnn和fc中，要求输出平；输入平到rnn和fc中，要求输出胡；输入胡到rnn和fc中，要求输出虏；如图所示。那么假设词典中一共有4000个记录，那么一个字对应的输出就有4000个，4000个里面每一个输出代表作为下一个输出的概率。
+
+    ![image-20231221111555332](/Users/lifangyuan/Library/Application Support/typora-user-images/image-20231221111555332.png)
+
+  - 怎么运作呢（test）？当我们向这个模型中随便输入一个字w0的时候，模型输出下一个字w1（w1是w0输出值中概率最大的字），再把w1作为输入，模型输出w2（w2是w1输出值中概率最大的字）...这样就可以做出一首诗了；
+
+  - 但是你会发现，如果每次都选择前一个字的输出概率最大的值作为下一个字的话，那么结果太过于单一（我输入100次水，做出来的诗都是一样的），此时就可以引入随机数，用轮盘赌机制（如果w0作为输入，其输出值4000个字里面，某个输出值较大，那么就大概率会输出这个字，但是不一定会输出这个字）来改善单一的状况；为了防止输出一些牛头不对马嘴的诗句，记得设定一些阈值
+
+- 作业：kaggle电影评论，根据文本判断负面、正面等 5分类
 
 ## P*：Pytorch教程13
