--- a/机器学习/机器学习.md
+++ b/机器学习/机器学习.md
@@ -154,9 +154,9 @@
 
      - 返回classLabel
 
-       ![image-20231010112110921](/Users/lifangyuan/Desktop/learn/pic/image-20231010112110921.png)
+       ![image-20231010112110921](../pic/image-20231010112110921.png)
 
-       ![](/Users/lifangyuan/Desktop/learn/pic/fbdf3e2427dc3c2ea915e4d419c85d3a.png)
+       ![](../pic/fbdf3e2427dc3c2ea915e4d419c85d3a.png)
 
        
 
@@ -229,7 +229,7 @@
 
   P(属于类别|具有某特征) = P(具有某特征|属于类别) * P(属于类别) / P(具有某特征) 
 
-  ![image-20231016103113564](/Users/lifangyuan/Desktop/learn/pic/image-20231016103113564.png)
+  ![image-20231016103113564](../pic/image-20231016103113564.png)
 
   
 
