--- a/机器学习/深度学习（李宏毅）.md
+++ b/机器学习/深度学习（李宏毅）.md
@@ -84,7 +84,7 @@
 
     什么是领域适应：一般我们在做机器学习的时候，往往假设训练数据和测试数据是非常相似的，比如训练数据是只有黑白两色的手写数字，测试数据也是只有黑白两色的数据。领域适应就是训练数据和测试数据不一定非常的相似，比如训练数据是只有黑白两色的手写数字，测试数据除了只有黑白两色的数据还有包括彩色内容的数据。
 
-    ![image-20231214142323932](/Users/lifangyuan/Desktop/learn/pic/image-20231214142323932.png)
+    ![image-20231214142323932](../pic/image-20231214142323932.png)
 
   - 模型压缩 network compression
 
@@ -138,7 +138,7 @@
 
     这里使用的唯一的方法是**gradient descent梯度下降**，gradient descent怎么做？假设只有一个未知参数w，画出loss和w的x-y轴关系曲线；找一个初始的随机的点w0，拿到w0点处的切线斜率；如果斜率是负的，w变大，如果斜率是正的，w变小。步长怎么定？斜率大步伐就大一点，斜率小步伐就小一点；步长还有学习率n来决定；不断移动w的位置；停止条件：迭代次数够了、误差够小。
 
-    ![image-20231214160043751](/Users/lifangyuan/Desktop/learn/pic/image-20231214160043751.png)
+    ![image-20231214160043751](../pic/image-20231214160043751.png)
 
   - **PS**，gradient descent 算微分不会算？可以用工具**backpropagation**
 
@@ -148,7 +148,7 @@
 
   观察真实y和预测y的对比曲线后，对model f（x）进行修改，而修改不仅来自于对真实y和预测y的对比曲线的观察，还来自于domain knowledge领域知识。对model进行修改一般会增加x（feature）的维度（增加x维度的同时也会增加x对应的weight w的个数），下面这些修改后的模型有一个共同的名字：linear model（y = b + wx，y与x的对应关系**总体上**是线性的直线，改变w不过是改变斜率，改变b不过的将直线上下移动）
 
-  ![image-20231214162150163](/Users/lifangyuan/Desktop/learn/pic/image-20231214162150163.png)
+  ![image-20231214162150163](../pic/image-20231214162150163.png)
 
   
 
@@ -156,35 +156,35 @@
 
   那么我们需要写更加复杂、灵活的函数，如**piecewise linear**，这个model中**f（x） = 一个常量 + 若干个_/‾**。这样就算实际要拟合的曲线是曲线或者非常复杂，也可以利用_/‾来拟合，其中一个常量constant是实际要拟合的曲线和y轴的交点，而 若干个 _/‾是c*sigmoid（b+wx1），各式各样形状的 _/‾只需要调整c、w、b即可获得，（改变w会改变s曲线的斜率，改变b会使得s左右移动，改变c会改变s的高度）。
 
-  ![image-20231214174213345](/Users/lifangyuan/Desktop/learn/pic/image-20231214174213345.png)
+  ![image-20231214174213345](../pic/image-20231214174213345.png)
 
   此时，我们的model由linear model 变成了 piecewise linear model
 
-  ![image-20231214174606870](/Users/lifangyuan/Desktop/learn/pic/image-20231214174606870.png)
+  ![image-20231214174606870](../pic/image-20231214174606870.png)
 
   如果再加入很多个feature呢，其中i代表每个 _/‾，j代表考虑前一天、前两天、前三天（3个feature）
 
   w矩阵的列表示feature数量、行表示 _/‾的数量
 
-  ![image-20231214174924498](/Users/lifangyuan/Desktop/learn/pic/image-20231214174924498.png)
+  ![image-20231214174924498](../pic/image-20231214174924498.png)
 
   画图+矩阵表示：
 
-  ![image-20231214180358269](/Users/lifangyuan/Desktop/learn/pic/image-20231214180358269.png)
+  ![image-20231214180358269](../pic/image-20231214180358269.png)
 
   引入矩阵后，化简公式，其中x是feature，w、b、c、b是未知参数。将w拉直为一条、向下拼上b、c、b，形成一个新的一条向量，这个向量里存的都是未知参数，一条形状的，里面不分w、b、c、b了。
 
-  ![image-20231214181546250](/Users/lifangyuan/Desktop/learn/pic/image-20231214181546250.png)
+  ![image-20231214181546250](../pic/image-20231214181546250.png)
 
   loss和optimization基本不变，optimization还像之前一样用牛顿法，步长固定（学习率）
 
-  ![image-20231214183213144](/Users/lifangyuan/Desktop/learn/pic/image-20231214183213144.png)
+  ![image-20231214183213144](../pic/image-20231214183213144.png)
 
   但是这样算太缓慢了，我们**改进一下loss和optimization的使用方法**
 
   假设有N条数据，将N条数据分成一组一组的**batch**（怎么分，随便分就可以），一个batch里面有B条数据。之前我们给 一整个N算一个loss再进行一个梯度下降更新迭代点；现在我们不这么做了，现在我们拿第一个batch里面的B条数据（训练后，拿到各个参数的值）得到一个loss L1，牛顿法，得到下一个迭代点的位置，**这叫做一次update**，再训练下一个batch，拿到各个参数的值，得到loss L2，牛顿法，得到下一个迭代点的位置。。。把所有的batch都看过一次叫做**epoch**，（每个batch）每一次更新参数叫做update，把所有的batch都看过一次叫做epoch。
 
-  ![image-20231214185453736](/Users/lifangyuan/Desktop/learn/pic/image-20231214185453736.png)
+  ![image-20231214185453736](../pic/image-20231214185453736.png)
 
   
 
@@ -194,11 +194,11 @@
 
   这里的relu和sigmiod都叫做激活函数activation function。sigmiod有几个和w矩阵还有c的行数一样的（i代表有几个sigmiod）。
 
-  ![image-20231214190726731](/Users/lifangyuan/Desktop/learn/pic/image-20231214190726731.png)
+  ![image-20231214190726731](../pic/image-20231214190726731.png)
 
 - 运算的重复
 
-  ![image-20231214192658967](/Users/lifangyuan/Desktop/learn/pic/image-20231214192658967.png)
+  ![image-20231214192658967](../pic/image-20231214192658967.png)
 
 - 以上说的就是神经网络neural network，其中一层sigmoid就是一层hidden layer，很多层hidden layer就很深 就是深度学习deep learning；
 
@@ -229,7 +229,7 @@
   - hidden layers：特征提取器（以前手动做feature engineering）
   - output layers：multi-class classifier，要通过一个softmax function做分类
 
-  ![image-20231214205506454](/Users/lifangyuan/Desktop/learn/pic/image-20231214205506454.png)
+  ![image-20231214205506454](../pic/image-20231214205506454.png)
 
   
 
@@ -239,7 +239,7 @@
 
   - 最后输出层用**softmax**的话，那么就会输出各个类别的possibility（那么共有10个类别）
 
-    ![image-20231214210148360](/Users/lifangyuan/Desktop/learn/pic/image-20231214210148360.png)
+    ![image-20231214210148360](../pic/image-20231214210148360.png)
 
   - 怎么算loss呢，输出的y是10 * 1的向量（预测值），而实际的y也可以构建成10 * 1的向量，loss就可以计算了
   - 
@@ -332,7 +332,7 @@
 
   - 题目：
 
-    ![image-20231215225942760](/Users/lifangyuan/Desktop/learn/pic/image-20231215225942760.png)
+    ![image-20231215225942760](../pic/image-20231215225942760.png)
 
   - 代码：
 
@@ -412,7 +412,7 @@
 
   - 作业
 
-    ![image-20231215234503623](/Users/lifangyuan/Desktop/learn/pic/image-20231215234503623.png)
+    ![image-20231215234503623](../pic/image-20231215234503623.png)
 
   - 画3d图可以用matlab，也可以用py.meshgrid()
 
@@ -487,7 +487,7 @@
 
 - 反向传播算法是有前向和反向的
 
-  ![image-20231216180835893](/Users/lifangyuan/Desktop/learn/pic/image-20231216180835893.png)
+  ![image-20231216180835893](../pic/image-20231216180835893.png)
 
 - pytorch里面怎么使用前向传播和反向传播？
 
@@ -533,7 +533,7 @@
 
 - 作业：利用pytorch反向传播进行二次函数拟合
 
-  ![image-20231218102458032](/Users/lifangyuan/Desktop/learn/pic/image-20231218102458032.png)
+  ![image-20231218102458032](../pic/image-20231218102458032.png)
 
 - 
 
@@ -711,7 +711,7 @@
 
 - 那么如何利用logistic回归来做分类问题呢？
 
-  输入的内容是线性的，是一个R范围内的实数，那么我们把这个实数映射到**[0,1]**之间这个函数叫做**logistic函数（是最具有典型性的sigmoid函数）**，[0,1]非常方便的进行概率转化！！一般论文中它被写作![image-20231218163232164](/Users/lifangyuan/Desktop/learn/pic/image-20231218163232164.png)
+  输入的内容是线性的，是一个R范围内的实数，那么我们把这个实数映射到**[0,1]**之间这个函数叫做**logistic函数（是最具有典型性的sigmoid函数）**，[0,1]非常方便的进行概率转化！！一般论文中它被写作![image-20231218163232164](../pic/image-20231218163232164.png)
 
   
 
@@ -725,7 +725,7 @@
 
 - **二分类问题的损失函数（BCE）：**
 
-  ![image-20231218165151494](/Users/lifangyuan/Desktop/learn/pic/image-20231218165151494.png)
+  ![image-20231218165151494](../pic/image-20231218165151494.png)
 
 - 那么linear model和logistic regression model有什么区别呢？
 
@@ -779,7 +779,7 @@
 
   x 和 y记得分开放到变量x，y里
 
-  ![image-20231218172553052](/Users/lifangyuan/Desktop/learn/pic/image-20231218172553052.png)
+  ![image-20231218172553052](../pic/image-20231218172553052.png)
 
 - 数据集可以去网上找，也可以去tochvision.datasets里面找，也可以去sklearn里面（有糖尿病）找
 
@@ -1064,7 +1064,7 @@
 
 - 作业根据其他特征来判断是否存活
 
-  ![image-20231218215542601](/Users/lifangyuan/Desktop/learn/pic/image-20231218215542601.png)
+  ![image-20231218215542601](../pic/image-20231218215542601.png)
 
 - Ps1：**记得把迭代epoch放到main函数里面去，这是pytorch的bug！**
 
@@ -1091,11 +1091,11 @@
 
     softmax函数如图所示：
 
-    ![image-20231219120741519](/Users/lifangyuan/Desktop/learn/pic/image-20231219120741519.png)
+    ![image-20231219120741519](../pic/image-20231219120741519.png)
 
     那么使用softmax之后，我们的损失函数如何定义，
 
-    ![image-20231219121247296](/Users/lifangyuan/Desktop/learn/pic/image-20231219121247296.png)
+    ![image-20231219121247296](../pic/image-20231219121247296.png)
 
 - 多分类问题的loss计算实现（当然是方法二啦）
 
@@ -1236,7 +1236,7 @@
 
 - 作业
 
-  ![image-20231219141649486](/Users/lifangyuan/Desktop/learn/pic/image-20231219141649486.png)
+  ![image-20231219141649486](../pic/image-20231219141649486.png)
 
 ## **P*：Pytorch教程小结**
 
@@ -1320,37 +1320,37 @@
 
 - 卷积神经网络的过程：convolution、subsampling、convolution、subsampling、｜（至此为特征的提取）｜展开成一维张量、fully-connected、softmax｜（这里是特征的分类）｜
 
-  ![image-20231219163245657](/Users/lifangyuan/Desktop/learn/pic/image-20231219163245657.png)
+  ![image-20231219163245657](../pic/image-20231219163245657.png)
 
 - 图像一般是RGB三个通道的，3 * W * H；**从三层里面“切”一块出来叫做patch**（3 * W' * H' ，patch的选取是在图片上进行慢慢滑动，“遍历一次”，切出来都是厚厚的一块），然后对图像做卷积（针对patch来做的），它的通道宽度高度都有可能发生变化，变为C'' * W'' * H''，新的patch通道数量叫做输出通道数（厚度），输出通道里的每一个值都是之前patch里面的每一个像素值与权重相乘的和，所以它的值包括了之前patch里面的某种信息，不断的卷积就会检测某种特征。满足特征的话值比较大，不满足的话值比较小
 
-  ![image-20231219164637215](/Users/lifangyuan/Desktop/learn/pic/image-20231219164637215.png)
+  ![image-20231219164637215](../pic/image-20231219164637215.png)
 
 - 卷积计算过程
 
   - 单通道卷积 （只有一个卷积核， 输入数据与它数乘求和）
 
-  ![image-20231219165819748](/Users/lifangyuan/Desktop/learn/pic/image-20231219165819748.png)
+  ![image-20231219165819748](../pic/image-20231219165819748.png)
 
   - **多通道卷积**（**卷积核的通道数= 图像的通道数**，每个通道卷积之后，记得做**求和**）（**一个卷积核像订书钉一样，原图像像纸一样，订一下，厚度消失且变成一个小格**了（究极sum叠加），C  * 3 * 3的卷积核会使得图像的长宽-2），**遍历原图像一次，就可以得到“一张”中间结果，那么多来几个卷积核，就可以得到厚厚的中间结果（拼接）**也就是说，有几个卷积核中间结果就有几个channal
 
     计算过程：
 
-    ![image-20231219171849688](/Users/lifangyuan/Desktop/learn/pic/image-20231219171849688.png)
+    ![image-20231219171849688](../pic/image-20231219171849688.png)
 
     
 
     叠加：
 
-    ![image-20231219172234633](/Users/lifangyuan/Desktop/learn/pic/image-20231219172234633.png)
+    ![image-20231219172234633](../pic/image-20231219172234633.png)
 
     m和n对应关系：
 
-    ![image-20231219173840383](/Users/lifangyuan/Desktop/learn/pic/image-20231219173840383.png)
+    ![image-20231219173840383](../pic/image-20231219173840383.png)
 
     所以卷积核的维度应该是：
 
-    ![image-20231219174317627](/Users/lifangyuan/Desktop/learn/pic/image-20231219174317627.png)
+    ![image-20231219174317627](../pic/image-20231219174317627.png)
 
     
 
@@ -1363,7 +1363,7 @@
 
   卷积核的输入通道必须和原图像的输入通道一致；卷积核的输出通道必须和输出图像的通道数一致。
 
-  ![image-20231219175033577](/Users/lifangyuan/Desktop/learn/pic/image-20231219175033577.png)
+  ![image-20231219175033577](../pic/image-20231219175033577.png)
 
 - padding变量指的是填充一圈0
 
@@ -1415,7 +1415,7 @@
 
 - minist手写数字集手算维度
 
-  ![image-20231219181447003](/Users/lifangyuan/Desktop/learn/pic/image-20231219181447003.png)
+  ![image-20231219181447003](../pic/image-20231219181447003.png)
 
 - 模型定义代码
 
@@ -1478,13 +1478,13 @@
   x,y = x.to(device),y.to( device)  #model和x，y要放到同一块显卡上！！！
   ```
 
-  ![image-20231219183251594](/Users/lifangyuan/Desktop/learn/pic/image-20231219183251594.png)
+  ![image-20231219183251594](../pic/image-20231219183251594.png)
 
-  ![image-20231219183348541](/Users/lifangyuan/Desktop/learn/pic/image-20231219183348541.png)
+  ![image-20231219183348541](../pic/image-20231219183348541.png)
 
 - 作业
 
-  ![image-20231219183924180](/Users/lifangyuan/Desktop/learn/pic/image-20231219183924180.png)
+  ![image-20231219183924180](../pic/image-20231219183924180.png)
 
   ```python
   # b 1 28 28
@@ -1533,15 +1533,15 @@
 
   总的model图：
 
-  ![image-20231219193956175](/Users/lifangyuan/Desktop/learn/pic/image-20231219193956175.png)
+  ![image-20231219193956175](../pic/image-20231219193956175.png)
 
   inception块内部构造图：
 
-  ![image-20231219194335505](/Users/lifangyuan/Desktop/learn/pic/image-20231219194335505.png)
+  ![image-20231219194335505](../pic/image-20231219194335505.png)
 
   其中，concatenate是指把张量（这里的张量形状是B * C * W * H）拼接到一块，（沿着通道的方向），如下图，因为4条路径算出来的肯定是4个张量，所以要拼接到一起，（**拼接之前要求这4个张量的宽度W和高度H是一样的，唯一可以不同的就是通道C**），像卷积3 * 3 、5 * 5 要求WH不变，那么做padding就可以了；要求 1* 1卷积核不变，那么就做带有padding的pooling就可以了。
 
-  ![image-20231219194932284](/Users/lifangyuan/Desktop/learn/pic/image-20231219194932284.png)
+  ![image-20231219194932284](../pic/image-20231219194932284.png)
 
   
 
@@ -1549,7 +1549,7 @@
 
   **1 * 1 卷积核有什么用呢？**用1 * 1的卷积核乘以图像C* W*H里每一个像素的值，然后就得到了卷积后的结果1 * W * H，（求过和了）这可以实现信息融合（比如说求平均、求加权平均等，那么最后的结果就包含了各个分项的信息，这叫**信息融合**），不同通道的同一位置的像素所含的信息整合到了一个块上（下图所示），与此同时还**改变了通道的数量（效率高）（不改变形状W * H）**
 
-  ![image-20231219200450316](/Users/lifangyuan/Desktop/learn/pic/image-20231219200450316.png)
+  ![image-20231219200450316](../pic/image-20231219200450316.png)
 
   
 
@@ -1563,9 +1563,9 @@
 
   为了方便我们将图片旋转
 
-  ![image-20231219201907265](/Users/lifangyuan/Desktop/learn/pic/image-20231219201907265.png)
+  ![image-20231219201907265](../pic/image-20231219201907265.png)
 
-  ![image-20231219204556520](/Users/lifangyuan/Desktop/learn/pic/image-20231219204556520.png)
+  ![image-20231219204556520](../pic/image-20231219204556520.png)
 
   代码
 
@@ -1608,9 +1608,9 @@
   return torch.cat(outputs,dim=1)# 最后的通道数为24+16+24+24 = 88
   ```
 
-  ![image-20231219205018683](/Users/lifangyuan/Desktop/learn/pic/image-20231219205018683.png)
+  ![image-20231219205018683](../pic/image-20231219205018683.png)
 
-  ![image-20231219205421027](/Users/lifangyuan/Desktop/learn/pic/image-20231219205421027.png)
+  ![image-20231219205421027](../pic/image-20231219205421027.png)
 
   
 
@@ -1624,21 +1624,21 @@
 
   在经过两个层后，**先不激活，先将它与x相加，相加后再激活**（梯度不会消失了，最小也是1）（**相加要求B * C * W * H，其中的通道宽度高度，C、W、H都得一样**）
 
-  ![image-20231219213614422](/Users/lifangyuan/Desktop/learn/pic/image-20231219213614422.png)
+  ![image-20231219213614422](../pic/image-20231219213614422.png)
 
   梯度不会消失的原因：梯度最小为1 不会到0
 
-  ![image-20231219213741167](/Users/lifangyuan/Desktop/learn/pic/image-20231219213741167.png)
+  ![image-20231219213741167](../pic/image-20231219213741167.png)
 
   论文中recvNet的结构
 
-  ![image-20231219214011244](/Users/lifangyuan/Desktop/learn/pic/image-20231219214011244.png)
+  ![image-20231219214011244](../pic/image-20231219214011244.png)
 
   实践一下，代码
 
   
 
-  ![image-20231219214531222](/Users/lifangyuan/Desktop/learn/pic/image-20231219214531222.png)
+  ![image-20231219214531222](../pic/image-20231219214531222.png)
 
   ```python
   class ResidualBlock(torch.nn.Module):
@@ -1658,7 +1658,7 @@
 
   结构：卷积池化激活、residualBlock、卷积池化激活、residualBlock、全连接层
 
-  ![image-20231219214406006](/Users/lifangyuan/Desktop/learn/pic/image-20231219214406006.png)
+  ![image-20231219214406006](../pic/image-20231219214406006.png)
 
   ```
   
@@ -1699,19 +1699,19 @@
 
   RNNcell过程图：
 
-  ![image-20231220101646755](/Users/lifangyuan/Desktop/learn/pic/image-20231220101646755.png)
+  ![image-20231220101646755](../pic/image-20231220101646755.png)
 
-  ![image-20231220102050035](/Users/lifangyuan/Desktop/learn/pic/image-20231220102050035.png)
+  ![image-20231220102050035](../pic/image-20231220102050035.png)
 
 - RNNcell的具体计算过程：
 
   - Xt（input_size * 1）作为输入，通过w * Xt + b变换到hidden t‘ （hidden_size * 1）（其中w维度：hidden_size * input_size），hidden t-1作为输入，通过 w * hidden t-1 * b 变换到hidden t'' （hidden_size * 1），（其中w维度：hidden size * hidden_size） ，然后计算hidden t（两者相加再激活，RNN中激活一般用tanh），hidden t = tanh（hidden t' + hidden t''）, 其中input_size 是输入数据的条数（样本数）
 
-    ![image-20231220103043275](/Users/lifangyuan/Desktop/learn/pic/image-20231220103043275.png)
+    ![image-20231220103043275](../pic/image-20231220103043275.png)
 
     化简后等于：
 
-    ![image-20231220103350930](/Users/lifangyuan/Desktop/learn/pic/image-20231220103350930.png)
+    ![image-20231220103350930](../pic/image-20231220103350930.png)
 
    
 
@@ -1729,7 +1729,7 @@
 
 - 输入一个序列到RNNCell里面，那么数据集摆放得是 seq_len * B * input_size，即特征量 * 批量值 * 每个特征是几维的 
 
-  ![image-20231220104446468](/Users/lifangyuan/Desktop/learn/pic/image-20231220104446468.png)
+  ![image-20231220104446468](../pic/image-20231220104446468.png)
 
 - 各个变量维度概览
 
@@ -1741,7 +1741,7 @@
 
   设计的RNNCell：torch.nn.RNNCell(input_size,hidden_size)
 
-  ![image-20231220105623326](/Users/lifangyuan/Desktop/learn/pic/image-20231220105623326.png)
+  ![image-20231220105623326](../pic/image-20231220105623326.png)
 
   
 
@@ -1794,11 +1794,11 @@
 
   - 比如说我们要让学习器学习字符串“hello”向“ohlol”转变的规律
 
-    ![image-20231220113625716](/Users/lifangyuan/Desktop/learn/pic/image-20231220113625716.png)
+    ![image-20231220113625716](../pic/image-20231220113625716.png)
 
   - 1.字符向量化表示（独热向量），将独热向量送到RNN里面作为输入
 
-    ![image-20231220114756212](/Users/lifangyuan/Desktop/learn/pic/image-20231220114756212.png)
+    ![image-20231220114756212](../pic/image-20231220114756212.png)
 
     inputs_size = 4
 
@@ -1806,7 +1806,7 @@
 
   - 2.输入到RNN里面，输出值y1、y2、y3、y4、y5，那么可以把每一个输出值yi看作是一个多分类器，（h、e、l、o里面4选1），将来每个yi输出值都是4维向量，它表示是h、e、l、o的概率，然后我们拿这4个向量接一个softmax，与y的独热向量对接即可
 
-    ![image-20231220122249414](/Users/lifangyuan/Desktop/learn/pic/image-20231220122249414.png)
+    ![image-20231220122249414](../pic/image-20231220122249414.png)
 
     注意这里的RNNcell输出值，outputsize是4
 
@@ -1881,7 +1881,7 @@
         
     ```
 
-    ![image-20231220132906626](/Users/lifangyuan/Desktop/learn/pic/image-20231220132906626.png)
+    ![image-20231220132906626](../pic/image-20231220132906626.png)
 
     
 
@@ -2010,7 +2010,7 @@
 
 - 改善结构：
 
-  ![image-20231220152337290](/Users/lifangyuan/Desktop/learn/pic/image-20231220152337290.png)
+  ![image-20231220152337290](../pic/image-20231220152337290.png)
 
   那么怎么写embedding层？
 
@@ -2060,7 +2060,7 @@
 
   输出是y,hn，cn
 
-  ![image-20231220185237075](/Users/lifangyuan/Desktop/learn/pic/image-20231220185237075.png)
+  ![image-20231220185237075](../pic/image-20231220185237075.png)
 
   - __ init __中
 
@@ -2128,11 +2128,11 @@
 
   4. 网络图：
 
-     ![image-20231220205638802](/Users/lifangyuan/Desktop/learn/pic/image-20231220205638802.png)
+     ![image-20231220205638802](../pic/image-20231220205638802.png)
 
      
 
-     ![image-20231220205705550](/Users/lifangyuan/Desktop/learn/pic/image-20231220205705550.png)
+     ![image-20231220205705550](../pic/image-20231220205705550.png)
 
 - 代码
 
@@ -2352,7 +2352,7 @@
 
   - 再，输入rnn，要求： 比如说何日平胡虏，我们输入何到rnn和fc中，要求输出日；输入日到rnn和fc中，要求输出平；输入平到rnn和fc中，要求输出胡；输入胡到rnn和fc中，要求输出虏；如图所示。那么假设词典中一共有4000个记录，那么一个字对应的输出就有4000个，4000个里面每一个输出代表作为下一个输出的概率。
 
-    ![image-20231221111555332](/Users/lifangyuan/Desktop/learn/pic/image-20231221111555332.png)
+    ![image-20231221111555332](../pic/image-20231221111555332.png)
 
   - 怎么运作呢（test）？当我们向这个模型中随便输入一个字w0的时候，模型输出下一个字w1（w1是w0输出值中概率最大的字），再把w1作为输入，模型输出w2（w2是w1输出值中概率最大的字）...这样就可以做出一首诗了；
 
